# ledpage

./: .gitignore  .gitmodules  .resin-sync.yml  Dockerfile.template  README.md  app.js  docker-entrypoint.sh  generate_pages.js  index.html  install.sh  media.js  nginx-config  package-lock.json  package.json  renderer.js  rollup.config.js  script.js  sockets.js  start.sh  template.handlebars
app/: Xcap.cpp  capv4l2.c  hyperion.config.json  ledmapcmd.json  process_v4l.cpp  start.sh  tryHyperionAPI.js  uv4ltut.cpp  v4l2grab.c  xscr.cpp
app/arduino_display/: arduino_display.ino  compileupload.sh
app/arduino_files/: arduino_display_copy.ino  display_pt1.txt  display_pt2.txt  makearduino.sh
app/cms/: .env  keystone.js  package.json
app/cpp_capture/: capture.cpp  capture.h
app/d3/: d3server.js  package.json
app/data/: index.html  sketch.js
app/hyperion_config/: config_pt2.txt  hyperion.config_copy.json  makehyperionconfig.sh  temp.json
app/led_config/: ledcoords.json  ledcoords31.json  ledcoords33.json  leds.json  svgson.json
backend/: CMakeLists.txt  compile.sh  main.cpp
backend/device/: DeviceManager.h  OutputGPIO.h  OutputPWM.h  OutputPWMbcm2835.h  OutputPWMpigpio.h  OutputSPI1.h  OutputSerial.h  OutputUART.h
backend/grabber/: Grabber.h  Image.h
cpp/: CMakeLists.txt  compile.sh  main.cpp
cpp/device/: DeviceManager.h  Output.h  OutputBluetooth.h  OutputGPIO.h  OutputI2Cbcm2835.h  OutputI2Cdev.h  OutputPWMbcm2835.h  OutputPWMpigpio.h  OutputSPI1.h  OutputSerial.h  OutputSerialDefault.h  OutputSerialDisk1.h  OutputUART.h  README.md  install_libBCM2835.sh
cpp/grabber/: ColorRgba.h  Grabber.h
default/: demo.json
examples/: README.md
examples/BLE_out/: README.md  arduino.ino  config.json
examples/I2C_out/: README.md  arduino.ino  config.json  pi_config.txt
examples/PWM_out/: README.md
examples/SPI_out/: README.md  config.json  pi_config.txt
examples/UART_out/: README.md  arduino.ino  config.json  pi_config.txt
examples/WebBluetooth_in/: README.md  RotationToBLE.ino
examples/WebRTC_in/: README.md
libs/: setup.json
libs/peer2peer/: LICENSE
libs/player/: main.js  package.json
media/item1/: demo.json
media/item2/: demo.json  index.html
models/: Media.js  MediaChannel.js  Profile.js  Sketch.js  User.js
partials/: header.hbs
public/: .default_config.json  .default_settings.json  config.json  index.html  index_nxt.html  index_old.html  script.js  setup.html  site.webmanifest  style.css  tacit.min.css  tacit.min.css.map
public/scss/: _defs.scss  _forms.scss  _grid.scss  _headings.scss  _tables.scss
renderer/: index.html  main.js  package-lock.json  package.json
renderer/.default/: config.json
routes/: README.md  index.js  middleware.js
routes/api/: leds.js  media.js  sketch.js
routes/views/: browse.js  index.js  media.js  setup.js  sketch.js  upload.js
src/: CMakeLists.txt  Image.h  main.cpp
src/cmake/: FindBCM.cmake
src/device/: DefaultDevice.h  DeviceManager.h  Output.h  OutputSerialDefault.h
src/grabber/: Grabber.h
templates/: channel.hbs  channel_block.hbs  disk.hbs  disk_editor.hbs  footer.hbs  output_form.hbs  output_graphic.hbs
templates/layouts/: default.pug
templates/views/: browse.pug  index.pug  media.pug  setup.pug  sketch.pug  upload.pug
ui/: app.js  generate_pages.js  media.js  package-lock.json  package.json  sockets.js
ui/partials/: footer.hbs  header.hbs
ui/public/: disk.hbs  index.html  script.js  style.css
ui/templates/: channel.hbs  disk.hbs  disk_editor.hbs  (+2 more)
updates/: 0.0.1-profile.js  0.0.1-sketches.js  0.0.2-profile.js  0.0.2-sketches.js  0.0.3-sketches.js  0.0.4-sketches.js  0.0.5-sketches.js  0.0.8-profile.js
views/: Configuration.svelte  ConfigurationInput.svelte  MapChain.svelte  MapContainer.svelte  MediaFeed.svelte  MediaFeedBlock.svelte  PageMain.svelte  PlaybackStatus.svelte  PlaybackStatusElement.svelte  client_data.js  home.hbs  settings.hbs
web/: app.js  media.js  package-lock.json  package.json  renderer.js  rollup.config.js  sockets.js
webui/: PageMain.svelte  PlaybackStatus.svelte  PlaybackStatusElement.svelte  stores.js
www/: app.js  media.js  package-lock.json  package.json
(+161 files in other folders)
